# itrun

./: .gitignore  LICENSE  README.md  env.bat  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.cargo/: config.toml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: configs.rs  history.rs  mod.rs  provider.rs  proxy.rs  settings.rs
src-tauri/src/configs/: codex_switch.rs  mod.rs
src-tauri/src/db/: config.rs  history.rs  migrate.rs  mod.rs
src-tauri/src/middleware/: logging.rs  mod.rs  ratelimit.rs  transform.rs
src-tauri/src/provider/: anthropic.rs  mod.rs  openai.rs  registry.rs  trait.rs
src-tauri/src/proxy/: handler.rs  mod.rs  router.rs  server.rs  sse.rs
src/components/dashboard/: LatencyChart.tsx  LiveRequests.tsx  StatsCard.tsx  TokenChart.tsx
src/components/history/: HistoryTable.tsx  RequestDetail.tsx
src/components/layout/: Header.tsx  IconBar.tsx  Layout.tsx  Sidebar.tsx
src/components/providers/: ModelSelector.tsx  ProviderForm.tsx  ProviderList.tsx
src/components/settings/: SettingsPanel.tsx
src/hooks/: useProxyStatus.ts  useStats.ts
src/lib/: tauri.ts  utils.ts
src/pages/: Dashboard.tsx  History.tsx  Providers.tsx  RelayConfig.tsx  Settings.tsx
src/stores/: historyStore.ts  providerStore.ts  proxyStore.ts  settingsStore.ts
