[package]
name = "codexbridge"
version = "0.1.0"
description = "AI Code Completion Relay Client"
authors = ["CodexBridge"]
edition = "2021"

[package.metadata]
# Tauri 2.x package metadata

[lib]
name = "codexbridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
ring = "0.17"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1"
http = "1"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
parking_lot = "0.12"
async-trait = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
